<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <com.mikhaellopez.circularimageview.CircularImageView
                            android:id="@+id/img_profile"
                            android:layout_width="@dimen/img_normal_80"
                            android:layout_height="@dimen/img_normal_80"
                            android:src="@drawable/ic_person"
                            app:civ_border_color="#EEEEEE"
                            app:civ_border_width="1dp"
                            app:civ_shadow="true"
                            app:civ_shadow_color="#646464"
                            app:civ_shadow_radius="8"/>

                    <co.th.appsynthandroidassignment.MyFontsStyle.MyTextViewFontsBold
                            android:id="@+id/tv_first_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_16"
                            android:layout_margin="5dp"
                            android:text="@string/firstName" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <co.th.appsynthandroidassignment.MyFontsStyle.MyTextViewFontsBold
                            android:id="@+id/tv_num_likes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_26"
                            android:text="305" />

                    <co.th.appsynthandroidassignment.MyFontsStyle.MyTextViewFonts
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_10"
                            android:text="@string/likes" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <co.th.appsynthandroidassignment.MyFontsStyle.MyTextViewFontsBold
                            android:id="@+id/tv_num_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_26"
                            android:text="212" />

                    <co.th.appsynthandroidassignment.MyFontsStyle.MyTextViewFonts
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_10"
                            android:text="@string/followers" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <co.th.appsynthandroidassignment.MyFontsStyle.MyTextViewFontsBold
                            android:id="@+id/tv_num_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_26"
                            android:text="128" />

                    <co.th.appsynthandroidassignment.MyFontsStyle.MyTextViewFonts
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_10"
                            android:text="@string/following" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_noti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/custom_recycler_view"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/lv_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:orientation="vertical">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:id="@+id/progressBar"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/lv_internet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone"
            android:orientation="vertical">

        <ImageView
                android:layout_width="@dimen/img_normal_120"
                android:layout_height="@dimen/img_normal_120"
                android:src="@drawable/img_offline"/>

        <co.th.appsynthandroidassignment.MyFontsStyle.MyTextViewFontsBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal_20"
                android:text="@string/offline" />

        <co.th.appsynthandroidassignment.MyFontsStyle.MyButtonFontsBold
                android:id="@+id/bt_refresh"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal_12"
                android:background="@drawable/border_button_try_again"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginTop="10dp"/>

    </LinearLayout>

</FrameLayout>